--- a/index.html
+++ b/index.html
@@ -304,8 +304,8 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="about">
           <h2 class="fmediana">Sobre mi</h2>
-          <p>Soy un Desarrolador Web y Estudiante de Ingenieria en TI y Sistemas con deseos de seguir creciendo de manera profesional y personal. Me gusta programar en JavaScript y en NodeJS, tengo experiencia en el desarrollo de paginas y aplicaciones web, tanto en front-end como en back-end. </p>
-          <p class="">Ademas ser desarrollador web, tengo un gran espiritu emprendedor y experiencia en la creacion de proyectos. Soy una persona muy autodidacta con habilidades para la toma de decisiones, facilidad de comunicacion, relaciones sociales y el trabajo en equipo.</p>
+          <p>Soy un Desarrollador Web e Ingeniero en TI y Sistemas con deseos de seguir creciendo de manera profesional y personal. Me gusta programar en JavaScript y en NodeJS, tengo experiencia en el desarrollo de paginas y aplicaciones web, tanto en front-end como en back-end.</p>
+          <p class="">Ademas de ser desarrollador web, tengo un gran espíritu emprendedor y experiencia en la creación de proyectos. Soy una persona muy autodidacta con habilidades para la toma de decisiones, facilidad de comunicación, relaciones sociales y el trabajo en equipo</p>
       </section>
 
 
