--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">Sobre mi</a>
+            <a class="nav-link js-scroll-trigger" href="#about">Sobre mí</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#skills">Habilidades</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#education">Educacion</a>
+            <a class="nav-link js-scroll-trigger" href="#experience">Experiencia</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience">Experiencia</a>
+            <a class="nav-link js-scroll-trigger" href="#education">Educación</a>
           </li>
         </ul>
       </div>
@@ -115,7 +115,7 @@
             <div class="col-sm-6">
               <div class="block">
                 <div class="block-title">
-                  <h2 class="fmediana mb-5">Personal Info</h2>
+                  <h2 class="fmediana mb-5">Info Personal</h2>
                 </div>
                 <ul class="profile-list">
                   <li class="">
@@ -123,20 +123,20 @@
                     <span class="cont">23</span>
                   </li>
                   <li class="">
-                    <strong class="title">Direccion</strong>
-                    <span class="cont"> Boca del Rio, Ver MX</span>
+                    <strong class="title">Dirección</strong>
+                    <span class="cont"> CDMX</span>
                   </li>
                   <li class="">
                     <strong class="title">E-mail</strong>
                     <span class="cont">jorzarios@gmail.com</span>
                   </li>
                   <li class="">
-                    <strong class="title">Telefono</strong>
+                    <strong class="title">Teléfono</strong>
                     <span class="cont">+152 229 29 15 37</span>
                   </li>
                   <li class="">
-                    <strong class="title">Pagina Web</strong>
-                    <a href="http://www.jorzarios.com"><span class="cont">jorzarios.com</span></a>
+                    <strong class="title">Página Web</strong>
+                    <a href="http://www.jorzarios.com.s3-website-us-east-1.amazonaws.com/"><span class="cont">jorzarios.com</span></a>
                   </li>
                 </ul>
               </div>
@@ -152,7 +152,7 @@
                   <div class="progress mb-4">
                     <div class="skill-percentage skill-2"></div>
                   </div>
-                  <p>Pensamiento estrategico</p>
+                  <p>Pensamiento estratégico</p>
                   <div class="progress mb-4">
                     <div class="skill-percentage skill-5"></div>
                   </div>
@@ -164,7 +164,7 @@
                   <div class="progress mb-4">
                     <div class="skill-percentage skill-6"></div>
                   </div>
-                  <p>Capacidad de comunicacion</p>
+                  <p>Capacidad de comunicación</p>
                   <div class="progress mb-4">
                     <div class="skill-percentage skill-7"></div>
                   </div>
@@ -178,28 +178,28 @@
           <div class="col-sm-6 mb-3">
             <div class="block">
               <div class="block-title">
-                <h2 class="fmediana mb-5">Tecnologias</h2>
+                <h2 class="fmediana mb-5">Tecnologías</h2>
               </div>
               <div class="skills-info">
                 <p>JavaScript</p>
                 <div class="progress mb-4">
                   <div class="skill-percentage skill-4"></div>
                 </div>
-                <p>jQuery</p>
-                <div class="progress mb-4">
-                  <div class="skill-percentage skill-1"></div>
-                </div>
                 <p>Angular</p>
                 <div class="progress mb-4">
-                  <div class="skill-percentage skill-3"></div>
+                  <div class="skill-percentage skill-8"></div>
                 </div>
                 <p>NodeJS</p>
                 <div class="progress mb-4">
-                  <div class="skill-percentage skill-6"></div>
+                  <div class="skill-percentage skill-8"></div>
                 </div>
-                <p>Java</p>
+                <p>MongoDB</p>
                 <div class="progress mb-4">
                   <div class="skill-percentage skill-8"></div>
+                </div>
+                <p>Firebase</p>
+                <div class="progress mb-4">
+                  <div class="skill-percentage skill-4"></div>
                 </div>
               </div>
             </div>
@@ -303,11 +303,61 @@
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="about">
-          <h2 class="fmediana">Sobre mi</h2>
-          <p>Soy un Desarrollador Web e Ingeniero en TI y Sistemas con deseos de seguir creciendo de manera profesional y personal. Me gusta programar en JavaScript y en NodeJS, tengo experiencia en el desarrollo de paginas y aplicaciones web, tanto en front-end como en back-end.</p>
+          <h2 class="fmediana">Sobre mí</h2>
+          <p>Soy un Desarrollador Web e Ingeniero en TI y Sistemas con deseos de seguir creciendo de manera profesional y personal. Me gusta programar en JavaScript y en NodeJS, tengo experiencia en el desarrollo de páginas y aplicaciones web, tanto en front-end como en back-end.</p>
           <p class="">Ademas de ser desarrollador web, tengo un gran espíritu emprendedor y experiencia en la creación de proyectos. Soy una persona muy autodidacta con habilidades para la toma de decisiones, facilidad de comunicación, relaciones sociales y el trabajo en equipo</p>
       </section>
 
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
+          <div class="page-content">
+              <div class="row">
+                <div class="col-sm-12">
+                  <div class="block">
+                    <div class="block-title">
+                      <h2 class="fmediana">Experiencia</h2>
+                    </div>
+
+                    <div class="timeline">
+                      <!-- Experience 1 -->
+                      <div class="timeline-item">
+                        <h4 class="item-title">Fullstack web developer</h4>
+                        <span class="item-period">Jun 2018 - Actual</span>
+                        <span class="item-small">Vintapp</span>
+                        <p class="item-description">Desarrollo de aplicaciones web, creación de servicios con nodejs y express, mongodb y mongoose, API REST, JWT(JSON Web Tokens), AWS(Amazon Web Services. Ec2, S3), Notificaciones mediante FCM(Firebase Cloud Messaging), conexión con el front, angular 6 y material design. Formularios, manejo de apis externas como googlemaps y paypal, operaciones CRUD.</p>
+                      </div>
+                      <!-- / Experience 1 -->
+                      <!-- Experience 2 -->
+                      <div class="timeline-item">
+                        <h4 class="item-title">Front-end developer</h4>
+                        <span class="item-period">Mar 2017 - Actual</span>
+                        <span class="item-small">Freelance</span>
+                        <p class="item-description">Creación, desarrollo y mantenimiento de páginas y aplicaciones web para pequeñas empresas, networking, administrador. JavaScript, Jquery, bootstrap, HTML, SCSS, Templates</p>
+                      </div>
+                      <!-- / Experience 2 -->
+
+                      <!-- Experience 3 -->
+                      <div class="timeline-item">
+                        <h4 class="item-title">Emprendedor</h4>
+                        <span class="item-period">Ene 2017 - Dic 2017</span>
+                        <span class="item-small">Jugos "Jugox"</span>
+                        <p class="item-description">Dueño y administrador de JUGOX, una empresa de venta de jugo de fruta natural. Primer proyecto de emprendedurismo</p>
+                      </div>
+                      <!-- / Experience 3 -->
+
+                      <!-- Experience 4 -->
+                      <div class="timeline-item">
+                        <h4 class="item-title">Administrador de inventario y logistica</h4>
+                        <span class="item-period">Sep 2014 - Dic 2015</span>
+                        <span class="item-small">Shulenburg cancelería</span>
+                        <p class="item-description">Encargado del registro de mercancia que llegaba a la fabrica, trabajo de administracion de la logística de obras.</p>
+                      </div>
+                      <!-- / Experience 4 -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+              </div>
+            </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
         <div class="page-content">
@@ -342,7 +392,7 @@
                     <h4 class="item-title">Certificado de Front-end</h4>
                     <span class="item-period">2016</span>
                     <span class="item-small">FreeCodeCamp.</span>
-                    <p class="item-description">Ejercicios y proyectos de Javascript y jQuery, Ajax, Manejo de API</p>
+                    <p class="item-description">Ejercícios y proyectos de Javascript y jQuery, Ajax, Manejo de API</p>
                   </div>
                   <!-- / Education 3 -->
 
@@ -350,8 +400,8 @@
                   <div class="timeline-item">
                     <h4 class="item-title">Diplomado en Programación de Sistemas de Información</h4>
                     <span class="item-period">Dic 2015 - Dic 2016</span>
-                    <span class="item-small">Computacion del Golfo.</span>
-                    <p class="item-description">Fundamentos de programacion, POO, GUI, JAVA, MYSQL.</p>
+                    <span class="item-small">Computación del Golfo.</span>
+                    <p class="item-description">Fundamentos de programación, POO, GUI, JAVA, MYSQL.</p>
                   </div>
                   <!-- / Education 4 -->
                 </div>
@@ -360,48 +410,6 @@
           </div>
         </div>
       </section>
-          <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
-              <div class="page-content">
-                  <div class="row">
-                    <div class="col-sm-12">
-                      <div class="block">
-                        <div class="block-title">
-                          <h2 class="fmediana">Experiencia</h2>
-                        </div>
-
-                        <div class="timeline">
-                          <!-- Experience 1 -->
-                          <div class="timeline-item">
-                            <h4 class="item-title">Frontend-developer</h4>
-                            <span class="item-period">Ene 2017 - Actual</span>
-                            <span class="item-small">Freelance</span>
-                            <p class="item-description">Creacion y desarrollo, mantenimiento de paginas y aplicaciones web para pequeñas empresas, networking, administrador</p>
-                          </div>
-                          <!-- / Experience 1 -->
-
-                          <!-- Experience 2 -->
-                          <div class="timeline-item">
-                            <h4 class="item-title">Emprendedor</h4>
-                            <span class="item-period">Ene 2017 - Dic 2017</span>
-                            <span class="item-small">Jugos "Jugox"</span>
-                            <p class="item-description">Dueño y administrador de un puesto de jugos. Primer proyecto de emprendedurismo</p>
-                          </div>
-                          <!-- / Experience 2 -->
-
-                          <!-- Experience 3 -->
-                          <div class="timeline-item">
-                            <h4 class="item-title">Administrador de inventario y logistica</h4>
-                            <span class="item-period">Sep 2014 - Dic 2015</span>
-                            <span class="item-small">Shulenburg cancelería</span>
-                            <p class="item-description">Encargado del registro de mercancia que llegaba a la fabrica, trabajo de administracion de la logistica de obras.</p>
-                          </div>
-                          <!-- / Experience 3 -->
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  </div>
-                </section>
 
 
     <!-- Bootstrap core JavaScript -->
