--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <ul class="profile-list">
                   <li class="">
                     <strong class="title">Edad</strong>
-                    <span class="cont">24</span>
+                    <span class="cont">25</span>
                   </li>
                   <li class="">
                     <strong class="title">Dirección</strong>
@@ -132,11 +132,7 @@
                   </li>
                   <li class="">
                     <strong class="title">Teléfono</strong>
-                    <span class="cont">+152 229 29 15 37</span>
-                  </li>
-                  <li class="">
-                    <strong class="title">Página Web</strong>
-                    <a href="http://www.jorzarios.com.s3-website-us-east-1.amazonaws.com/"><span class="cont">jorzarios.com</span></a>
+                    <span class="cont">229 229 1537</span>
                   </li>
                 </ul>
               </div>
@@ -247,7 +243,7 @@
           </div>
 
           <div class="my-auto text-center">
-            <div class="subheading mb-3">lenguajes y herramientas que utilizo</div>
+            <div class="subheading mb-3">Lenguajes de programación y tecnologías</div>
             <ul class="list-inline list-icons">
               <li class="list-inline-item">
                 <i class="devicons devicons-javascript"></i>
@@ -265,16 +261,7 @@
                 <i class="devicons devicons-nodejs"></i>
               </li>
               <li class="list-inline-item">
-                <i class="devicons devicons-bootstrap"></i>
-              </li>
-              <li class="list-inline-item">
                 <i class="devicons devicons-wordpress"></i>
-              </li>
-              <li class="list-inline-item">
-                <i class="devicons devicons-gulp"></i>
-              </li>
-              <li class="list-inline-item">
-                <i class="devicons devicons-npm"></i>
               </li>
               <li class="list-inline-item">
                 <i class="devicons devicons-aws"></i>
@@ -289,12 +276,6 @@
                 <i class="devicons devicons-heroku"></i>
               </li>
               <li class="list-inline-item">
-                <i class="devicons devicons-mysql"></i>
-              </li>
-              <li class="list-inline-item">
-                <i class="devicons devicons-materializecss"></i>
-              </li>
-              <li class="list-inline-item">
                 <i class="devicons devicons-css3"></i>
               </li>
             </ul>
@@ -304,8 +285,8 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="about">
           <h2 class="fmediana">Sobre mí</h2>
-          <p>Soy un Desarrollador Web e Ingeniero en TI y Sistemas con deseos de seguir creciendo de manera profesional y personal. Me gusta programar en JavaScript y en NodeJS, tengo experiencia en el desarrollo de páginas y aplicaciones web, tanto en front-end como en back-end.</p>
-          <p class="">Ademas de ser desarrollador web, tengo un gran espíritu emprendedor y experiencia en la creación de proyectos. Soy una persona muy autodidacta con habilidades para la toma de decisiones, facilidad de comunicación, relaciones sociales y el trabajo en equipo</p>
+          <p>Desarrollador full stack de aplicaciones web y páginas web. 2+ años de experiencia en el desarrollo de SPAs (single page applications) con MEAN stack. Experiencia en Angular 6+, HTML, CSS, JavaScript, Nodejs y bases de datos no relacionarles cómo MONGODB y relaciónales como MySQL.  Experiencia en trabajar con API REST utilizando NodeJs y el consumo de estas desde el front-end. Soy muy autodidacta, con una gran capacidad para el desarrollo del trabajo en equipo, adaptación y proponer nuevas soluciones e ideas.</p>
+          <p class="">Además tengo un gran espíritu emprendedor y experiencia en la creación de proyectos. Facilidad de comunicación e interaccion social.</p>
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
@@ -318,40 +299,22 @@
                     </div>
 
                     <div class="timeline">
+                     <!-- Experience 2 -->
+                      <div class="timeline-item">
+                        <h4 class="item-title">Full stack web developer</h4>
+                        <span class="item-period">Mar 2017 - Actual</span>
+                        <span class="item-small">Freelance</span>
+                        <p class="item-description">Creación, desarrollo y mantenimiento de páginas y aplicaciones web para pequeñas empresas, networking, administrador. MEAN stack, JavaScript, Jquery, bootstrap, HTML, SCSS, Wordpress. </p>
+                      </div>
+                      <!-- / Experience 2 -->
                       <!-- Experience 1 -->
                       <div class="timeline-item">
                         <h4 class="item-title">Fullstack web developer</h4>
-                        <span class="item-period">Jun 2018 - Actual</span>
+                        <span class="item-period">Jun 2018 - Mar 2019</span>
                         <span class="item-small">Vintapp</span>
-                        <p class="item-description">Desarrollo de aplicaciones web, creación de servicios con nodejs y express, mongodb y mongoose, API REST, JWT(JSON Web Tokens), AWS(Amazon Web Services. Ec2, S3), Notificaciones mediante FCM(Firebase Cloud Messaging), conexión con el front, angular 6 y material design. Formularios, manejo de apis externas como googlemaps y paypal, operaciones CRUD.</p>
+                        <p class="item-description">Desarrollo de aplicacion de Tracking (gps), Sistema de contabilidad autoadministrable, participación en el desarrollo de una aplicacion movil creando una API que es consumida por dispositivos moviles, creación de servicios web con nodejs y express, mongodb y mongoose, API REST, JWT(JSON Web Tokens), AWS(Amazon Web Services. Ec2, S3), Notificaciones mediante FCM(Firebase Cloud Messaging), conexión con el front-end, angular 6 y material design. Formularios, manejo de apis externas como googlemaps y paypal, operaciones CRUD. GPS tracking</p>
                       </div>
                       <!-- / Experience 1 -->
-                      <!-- Experience 2 -->
-                      <div class="timeline-item">
-                        <h4 class="item-title">Front-end developer</h4>
-                        <span class="item-period">Mar 2017 - Actual</span>
-                        <span class="item-small">Freelance</span>
-                        <p class="item-description">Creación, desarrollo y mantenimiento de páginas y aplicaciones web para pequeñas empresas, networking, administrador. JavaScript, Jquery, bootstrap, HTML, SCSS, Templates</p>
-                      </div>
-                      <!-- / Experience 2 -->
-
-                      <!-- Experience 3 -->
-                      <div class="timeline-item">
-                        <h4 class="item-title">Emprendedor</h4>
-                        <span class="item-period">Ene 2017 - Dic 2017</span>
-                        <span class="item-small">Jugos "Jugox"</span>
-                        <p class="item-description">Dueño y administrador de JUGOX, una empresa de venta de jugo de fruta natural. Primer proyecto de emprendedurismo</p>
-                      </div>
-                      <!-- / Experience 3 -->
-
-                      <!-- Experience 4 -->
-                      <div class="timeline-item">
-                        <h4 class="item-title">Administrador de inventario y logistica</h4>
-                        <span class="item-period">Sep 2014 - Dic 2015</span>
-                        <span class="item-small">Shulenburg cancelería</span>
-                        <p class="item-description">Encargado del registro de mercancia que llegaba a la fabrica, trabajo de administracion de la logística de obras.</p>
-                      </div>
-                      <!-- / Experience 4 -->
                     </div>
                   </div>
                 </div>
