--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="about">
           <h2 class="fmediana">Sobre mí</h2>
           <p>Desarrollador full stack de aplicaciones web y páginas web. 2+ años de experiencia en el desarrollo de SPAs (single page applications) con MEAN stack. Experiencia en Angular 6+, HTML, CSS, JavaScript, Nodejs y bases de datos no relacionarles cómo MONGODB y relaciónales como MySQL.  Experiencia en trabajar con API REST utilizando NodeJs y el consumo de estas desde el front-end. Soy muy autodidacta, con una gran capacidad para el desarrollo del trabajo en equipo, adaptación y proponer nuevas soluciones e ideas.</p>
-          <p class="">Además tengo un gran espíritu emprendedor y experiencia en la creación de proyectos. Facilidad de comunicación e interaccion social.</p>
+          <p class="">Además tengo un gran espíritu emprendedor y experiencia en la creación de proyectos. Facilidad de comunicación e interacción social.</p>
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
