--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                       <!-- / Experience 2 -->
                       <!-- Experience 1 -->
                       <div class="timeline-item">
-                        <h4 class="item-title">Fullstack web developer</h4>
+                        <h4 class="item-title">MEAN stack web developer</h4>
                         <span class="item-period">Jun 2018 - Mar 2019</span>
                         <span class="item-small">Vintapp</span>
                         <p class="item-description">Desarrollo de aplicacion de Tracking (gps), Sistema de contabilidad autoadministrable, participación en el desarrollo de una aplicacion movil creando una API que es consumida por dispositivos moviles, creación de servicios web con nodejs y express, mongodb y mongoose, API REST, JWT(JSON Web Tokens), AWS(Amazon Web Services. Ec2, S3), Notificaciones mediante FCM(Firebase Cloud Messaging), conexión con el front-end, angular 6 y material design. Formularios, manejo de apis externas como googlemaps y paypal, operaciones CRUD. GPS tracking</p>
