Actualización de CV

--- a/index.html
+++ b/index.html
@@ -296,6 +296,14 @@
                     </div>
 
                     <div class="timeline">
+                       <!-- Experience 3 -->
+                      <div class="timeline-item">
+                        <h4 class="item-title">Project Manager</h4>
+                        <span class="item-period">Mar 2020 - Actual</span>
+                        <span class="item-small">Semicirculo Ecommerce Digital</span>
+                        <p class="item-description">Diagnósticos Empresariales, Auditorías Ecommerce, Mejora de conversión en landing pages y tiendas en línea, supervisor de campañas de marketing en Meta, Experto en Woocommerce y desarrollo de tiendas en línea, Análisis de Funnel de Venta y oportunidades de mejora</p>
+                      </div>
+                      <!-- / Experience 3 -->
                      <!-- Experience 2 -->
                       <div class="timeline-item">
                         <h4 class="item-title">Full stack web developer</h4>
