--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                                 <li>Uso de Google analytics y Tag Manager</li>
                                </ul>
                            
-                          /div>
+                          </div>
                       </div>
                       <!-- / Experience 3 -->
                      <!-- Experience 2 -->
